tests/compile_fail/as_ref/multiple_struct_attrs.stderr
error: only single `#[as_ref(...)]` attribute is allowed here
 --> tests/compile_fail/as_ref/multiple_struct_attrs.rs:3:1
  |
3 | #[as_ref(forward)]
  | ^
